--- a/README
+++ b/README
@@ -1,16 +1,16 @@
-Text-CSV_Multiline version 0.01
+Text-CSV_Multiline version 0.02
 ===============================
 
-The README is used to introduce the module and provide instructions on
-how to install the module, any machine dependencies it may have (for
-example C compilers and installed libraries) and any other information
-that should be provided before the module is installed.
+This is a very simple comma-separated-value (CSV) file reader
+and writer. At the time it was created, the standard Text::CSV
+module could not handle fields that had embedded newline codes, thus
+this module was written which could handle "multiple lines" in a
+single CSV field.
 
-A README file is required for CPAN modules since CPAN extracts the
-README file from a module distribution so that people browsing the
-archive can use it get an idea of the modules uses. It is usually a
-good idea to provide version information here so that people can
-decide whether fixes for the module are worth downloading.
+It appears that newer versions of Text::CSV have added the capability,
+though I have not tested it to see if it meets my needs. Anyway, I
+already have several projects that use this module, so I am maintaining
+this for just a little longer.
 
 INSTALLATION
 
@@ -25,16 +25,12 @@ DEPENDENCIES
 
 This module requires these other modules and libraries:
 
-  blah blah blah
+  None
 
 COPYRIGHT AND LICENCE
 
-Put the correct copyright and licence information here.
-
-Copyright (C) 2007 by A. U. Thor
+Copyright (C) 2007,2011 by Jason Long, Messiah College.
 
 This library is free software; you can redistribute it and/or modify
 it under the same terms as Perl itself, either Perl version 5.8.8 or,
 at your option, any later version of Perl 5 you may have available.
-
-
